objects/ACR5__c.object
<CustomObject>
    <description>007 feb8th</description>
    <fields>
        <fullName>F3__c</fullName>
        <description>test feb8th</description>
        <label>F3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field1__c</fullName>
        <description>1112</description>
        <label>field1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>field2__c</fullName>
        <description>sdfsd</description>
        <label>field2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>pf1__c</fullName>
        <description>sdf</description>
        <label>pf1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test1</valueSetName>
        </valueSet>
    </fields>
    <label>ACR5</label>
    <nameField>
        <label>ACR5 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACR5s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>